non-clickable logo on mobile fix

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -60,8 +60,6 @@ header {
     align-items: center;
     width: 100%;
     height: 100px;
-
-    pointer-events: none;
 }
 
 .header-container.mobile .logo-text {
